# chadboar

./: .gitignore  AGENTS.md  BOAR_MANIFEST.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  README.md  SKILLS.md  SKILLS_OVERVIEW.md  SOUL.md  TOOLS.md  USER.md  boar  pyproject.toml  requirements.txt  test_week1_fixes.py
config/: firehose.yaml  risk.yaml
docs/: ACCEPTANCE_GATE_RESULTS.md  AUTISTBOAR_BROADCAST_v0.3.md  AUTISTBOAR_OPUS_BRIEF.md  BEAD_ARCHITECTURE.md  BEAD_FIELD_SPEC_IMPL.md  BOAR_BRIEFING_CP09.md  BUILD_PLAN_v0.2.md  CLAUDE_ORIENTATION.md  CONVERSATION_PERSISTENCE.md  CONVICTION_SCORING_IMPLEMENTATION.md  COO_BRIEF_BEAD_FIELD_SPEC.md  DIAGNOSTIC_2026-02-16_ZERO_TRADES.md  ESCALATION_TIERS.md  FORENSICS_2026-02-11_HEARTBEAT_REGRESSION.md  FORENSICS_2026-02-13_TELEGRAM_FIX.md  FORENSICS_2026-02-13_TELEGRAM_INTERACTIVE_FIX.md  IDEA_BANK.md  OPERATIONS.md  ORIENTATION_HABITS.md  PIPELINE_ARCHITECTURE.md  ROUTING.md  SECURITY.md  SYSTEM_STATUS.md  TRIANGULATION_TUNING_V02.md  WEEK1_FIXES.md  openclaw.json.template  triangulation_audit.md
lib/: __init__.py  acceptance_gate.py  config.py  heartbeat_runner.py  llm_utils.py  scoring.py  state.py  watchdog.py
outputs/: poem_for_eddie.txt
scripts/: bootstrap.sh  diagnose.sh  generate_image.py  health_check.sh  openclaw-update.sh  tts_elevenlabs.py  watchdog.sh
state/: checkpoint.md  conversation_context.md  heartbeat_demo.md  latest.md  narrative_cache.json  node_signing.pub  state.json  state.json.bak  state.json.template  whale_cache.json
tests/: test_bead_field.py  test_beads.py  test_chain.py  (+11 more)
(+60 files in other folders)
